--- a/019_css-selectors/01_element/main.css
+++ b/019_css-selectors/01_element/main.css
@@ -1,29 +1,32 @@
 * {
-    margin: 50px;
+  margin: 50px;
 }
 
 header {
-    width: 100%;
-    height: 100px;
-    background-color: red;
+  width: 100%;
+  height: 100px;
+  background-color: red;
 }
 
 section {
-    width: 100%;
-    height: 200px;
-    background-color: blue;
+  width: 100%;
+  height: 200px;
+  background-color: blue;
 }
 
 article {
-    width: 50%;
-    height: 100px;
-    background-color: yellow;
+  width: 50%;
+  height: 100px;
+  background-color: yellow;
 }
 
-aside, footer {
-    width: 100%;
-    height: 100px;
-    background-color: green;
+aside,
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: green;
 }
 
-
+[contenteditable] {
+  border: 2px dashed black;
+}
