--- a/019_css-selectors/05_pseudo-class/05_focus/01_link/main.css
+++ b/019_css-selectors/05_pseudo-class/05_focus/01_link/main.css
@@ -1,7 +1,55 @@
 a {
-    font-size: 200px;
+  font-size: 200px;
 }
 
 a:focus {
-    color: red;
+  color: red;
+}
+
+.form-style {
+  border: 1px solid black;
+  border-radius: 5px;
+  /* width: 100%; */
+  margin: 20px 50px;
+  padding: 20px;
+  text-align: center;
+  font-size: 25px;
+}
+
+[type="submit"] {
+  font-size: 20px;
+  font-family: sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: aqua;
+}
+[type="submit"]:hover {
+  background-color: aquamarine;
+  cursor: pointer;
+}
+[type="submit"]:focus {
+  border: 2px solid greenyellow;
+  color: red;
+}
+
+div p::first-line {
+  text-transform: capitalize;
+  color: red;
+}
+div p::first-letter {
+  color: orange;
+  font-weight: bold;
+  font-size: 50px;
+}
+p:first-child {
+  color: green;
+}
+p:last-child {
+  color: yellow;
+}
+p:nth-child(even) {
+  color: blue;
+}
+div p:first-letter {
+  color: purple;
 }
