--- a/025_formatting-text/01_default-font-settings/main.css
+++ b/025_formatting-text/01_default-font-settings/main.css
@@ -21,4 +21,8 @@ h1 {
   text-transform: lowercase;
   text-align: center;
   text-shadow: 1px 2px 20px red;
+  /* text-decoration: underline; */
+  /* text-decoration: line-through; */
+  /* text-decoration: overline underline line-through; */
+  text-decoration-style: wavy;
 }
