--- a/031_flexbox/03_hands-on-exercises/02_solutions/02_six-pages/04_flex-basis/main.css
+++ b/031_flexbox/03_hands-on-exercises/02_solutions/02_six-pages/04_flex-basis/main.css
@@ -1,16 +1,22 @@
 body {
-    display: flex;
-    /* formatting */
-    border: 5px solid red;
+  display: flex;
+  /* formatting */
+  border: 5px solid red;
 }
 
 div {
-    flex-basis: auto;
-    /* formatting */
-    width: 500px;
-    height: 100px;
-    margin: 1em;
-    border: 1px solid red;
-    background-color: darkgray;
-    text-align: center;
+  flex-basis: auto;
+  /* formatting */
+  width: 500px;
+  height: 100px;
+  margin: 1em;
+  border: 1px solid red;
+  background-color: darkgray;
+  text-align: center;
+}
+
+@media (min-width: 900px) {
+  div {
+    color: blue;
+  }
 }
