--- a/048_transitions-animations/02_animation/03_animation-direction/main.css
+++ b/048_transitions-animations/02_animation/03_animation-direction/main.css
@@ -10,39 +10,45 @@ animation-play-state: running
 */
 
 html {
-    font-size: 4vw;
+  font-size: 4vw;
 }
 
-html, body {
-    padding: 0;
-    margin: 0;
-    height: 100%
+html,
+body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
 }
 
 body {
-    color: red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .icon {
-    width: 1em; height: 1em;
-    fill: currentColor;
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
 }
 
 .circle {
-    font-size: 8rem;
+  font-size: 8rem;
 }
 
 body {
-    animation-name: change-color;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+  animation-name: change-color;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 @keyframes change-color {
-    0% { color: red; }
-    100%   { color: gold; }
+  0% {
+    color: red;
+  }
+  100% {
+    color: gold;
+  }
 }
