--- a/036_float/02_float_clear/01/main.css
+++ b/036_float/02_float_clear/01/main.css
@@ -1,17 +1,19 @@
 div {
-    float: left;
-    /* formatting */
-    width: 200px;
-    height: 100px;
-    margin: 1em;
-    border: 2px solid green;
-    background-color: red;
+  float: left;
+  /* formatting */
+  width: 200px;
+  height: 100px;
+  margin: 1em;
+  border: 2px solid green;
+  background-color: red;
 }
 
 section {
-    border: 2px solid blue;
+  /* clear: both; */
+  /* overflow: auto; */
+  border: 2px solid blue;
 }
 
 #hanh {
-    clear: both;
+  clear: both;
 }
